Fix a CSS bug that an unwanted scrollbar appears.

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -53,13 +53,13 @@ $ps-bar-hover: #999;
 @mixin in-scrolling {
   &.ps-in-scrolling {
     pointer-events: none;
-    >.ps-scrollbar-x-rail {
+    &.ps-x>.ps-scrollbar-x-rail{
       @include scrollbar-rail-hover;
       >.ps-scrollbar-x {
         @include scrollbar-hover;
       }
     }
-    >.ps-scrollbar-y-rail {
+    &.ps-y>.ps-scrollbar-y-rail {
       @include scrollbar-rail-hover;
       >.ps-scrollbar-y {
         @include scrollbar-hover;
